# Polynomial-Bot

./: Cargo.toml  README.md  utils.rs
src/: book.rs  common.rs  context.rs  data_engine.rs  errors.rs  fetcher.rs  lib.rs  main.rs  stream.rs  types.rs
tests/: test.rs
