[package]
name = "polynomial"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { version = "0.3.31", features = ["std"] }
anyhow = "1.0.100"
dashmap = "6.1.0"
polyfill-rs = "0.2.3"
serde_json = "1.0.149"
smol_str = "0.3.4"
thiserror = "2.0.17"
chrono = "0.4"
tokio = { version = "1.49.0", features = ["full"] }
serde = "1.0.228"
serde_with = { version = "3.0", features = ["json"] }
rust_decimal = { version = "1.39.0", features = ["serde-float"] }
